# orangepi-3984

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt-paths-not-linked  CMakeLists.txt2  Makefile  README.md  aarch64-linux-gnu.cmake  aarch64-toolchain.cmake  build.sh  cmake_install.cmake  lapack_stub.c  rockchip_npu  stubs.c
include/: httplib.h  mjpeg_streamer.hpp  rknn_api.h  rknn_api.h.gch
src/: main-rknn.cpp  main-torch.cpp
